--- a/AutoMall/ViewControllers/Mall/CommodityListCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityListCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="96.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="汽车全合成机油" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRa-QY-8GY">
@@ -45,16 +45,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="s7q-Ur-gMF">
-                        <rect key="frame" x="96" y="48" width="22.5" height="21"/>
+                        <rect key="frame" x="96" y="48" width="31.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="WYt-Yg-kCL"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" red="0.98431372549999996" green="0.2666666667" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="zsK-Al-e4b" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="126.5" y="48" width="22.5" height="21"/>
+                        <rect key="frame" x="135.5" y="50" width="22.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="xjJ-Ax-whH"/>
                         </constraints>
@@ -63,11 +63,11 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="配送费--元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="esk-eX-Krg">
-                        <rect key="frame" x="96" y="71" width="46" height="21"/>
+                        <rect key="frame" x="96" y="71" width="51" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="dUn-Zg-syD"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -125,17 +125,17 @@
                     <constraint firstItem="AlS-7I-jIZ" firstAttribute="centerY" secondItem="GRa-QY-8GY" secondAttribute="centerY" id="0xi-Qf-w3i"/>
                     <constraint firstItem="VC7-ne-Eyh" firstAttribute="leading" secondItem="AlS-7I-jIZ" secondAttribute="trailing" constant="5" id="3ce-dV-Udt"/>
                     <constraint firstItem="Nob-g3-BC6" firstAttribute="leading" secondItem="Xnv-N7-lXx" secondAttribute="trailing" constant="16" id="3wL-jP-wry"/>
-                    <constraint firstItem="zsK-Al-e4b" firstAttribute="centerY" secondItem="s7q-Ur-gMF" secondAttribute="centerY" id="6B0-1u-GyO"/>
+                    <constraint firstItem="zsK-Al-e4b" firstAttribute="centerY" secondItem="s7q-Ur-gMF" secondAttribute="centerY" constant="2" id="6B0-1u-GyO"/>
                     <constraint firstItem="s7q-Ur-gMF" firstAttribute="leading" secondItem="rdR-7Y-MpC" secondAttribute="trailing" constant="8" id="6fv-6z-yFi"/>
                     <constraint firstAttribute="trailing" secondItem="jlg-Gy-XOM" secondAttribute="trailing" constant="8" id="6nE-I6-T2L"/>
                     <constraint firstItem="zsK-Al-e4b" firstAttribute="leading" secondItem="s7q-Ur-gMF" secondAttribute="trailing" constant="8" id="A3V-Te-rBr"/>
                     <constraint firstItem="rdR-7Y-MpC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Dd2-bx-apt"/>
                     <constraint firstItem="rdR-7Y-MpC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="HKs-dD-XHc"/>
                     <constraint firstItem="Xnv-N7-lXx" firstAttribute="top" secondItem="GRa-QY-8GY" secondAttribute="bottom" constant="2" id="IKa-NF-6aJ"/>
+                    <constraint firstItem="esk-eX-Krg" firstAttribute="top" secondItem="s7q-Ur-gMF" secondAttribute="bottom" constant="2" id="KNH-XN-hru"/>
                     <constraint firstItem="AlS-7I-jIZ" firstAttribute="leading" secondItem="GRa-QY-8GY" secondAttribute="trailing" constant="5" id="TjZ-So-unU"/>
                     <constraint firstItem="GRa-QY-8GY" firstAttribute="leading" secondItem="rdR-7Y-MpC" secondAttribute="trailing" constant="8" id="UPC-9G-78x"/>
                     <constraint firstItem="Nob-g3-BC6" firstAttribute="centerY" secondItem="Xnv-N7-lXx" secondAttribute="centerY" id="VTU-eE-LrF"/>
-                    <constraint firstItem="esk-eX-Krg" firstAttribute="top" secondItem="zsK-Al-e4b" secondAttribute="bottom" constant="2" id="bau-re-mPh"/>
                     <constraint firstItem="jlg-Gy-XOM" firstAttribute="leading" secondItem="VC7-ne-Eyh" secondAttribute="trailing" constant="5" id="cRx-v1-B4p"/>
                     <constraint firstItem="VC7-ne-Eyh" firstAttribute="centerY" secondItem="GRa-QY-8GY" secondAttribute="centerY" id="gK8-nM-Ovy"/>
                     <constraint firstItem="FG4-rV-5Pr" firstAttribute="centerY" secondItem="Xnv-N7-lXx" secondAttribute="centerY" id="icQ-4c-MQs"/>
