--- a/AutoMall/Base.lproj/Main.storyboard
+++ b/AutoMall/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -153,7 +153,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j5c-wX-7Y7">
-                                        <rect key="frame" x="16" y="7" width="171.5" height="30"/>
+                                        <rect key="frame" x="0.0" y="7" width="187.5" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="cuh-9p-A2a"/>
                                         </constraints>
@@ -162,34 +162,34 @@
                                             <color key="titleColor" red="0.50196078430000002" green="0.49803921569999998" blue="0.49803921569999998" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <state key="selected">
-                                            <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="0.92941176470588238" green="0.10980392156862745" blue="0.14117647058823529" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="zixunAction:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="gLK-5S-qDB"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UGI-FN-iL2">
-                                        <rect key="frame" x="16.5" y="42" width="171.5" height="2"/>
-                                        <color key="backgroundColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <rect key="frame" x="0.5" y="42" width="187.5" height="2"/>
+                                        <color key="backgroundColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="dlR-ZA-XDz"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wtz-mu-GLA">
-                                        <rect key="frame" x="187.5" y="7" width="171.5" height="30"/>
+                                        <rect key="frame" x="187.5" y="7" width="187.5" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <state key="normal" title="使用教程">
                                             <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="selected">
-                                            <color key="titleColor" red="0.74901960779999999" green="0.21960784310000001" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="jiaochengAction:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="VwZ-eF-cbb"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kmq-6V-J6a">
-                                        <rect key="frame" x="188" y="42" width="171.5" height="2"/>
+                                        <rect key="frame" x="188" y="42" width="187.5" height="2"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="MnP-Ij-cL9"/>
@@ -199,13 +199,13 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="Wtz-mu-GLA" firstAttribute="height" secondItem="j5c-wX-7Y7" secondAttribute="height" id="2zW-QG-jeb"/>
-                                    <constraint firstAttribute="trailing" secondItem="Wtz-mu-GLA" secondAttribute="trailing" constant="16" id="840-52-3pT"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wtz-mu-GLA" secondAttribute="trailing" id="840-52-3pT"/>
                                     <constraint firstItem="Wtz-mu-GLA" firstAttribute="centerY" secondItem="j5c-wX-7Y7" secondAttribute="centerY" id="Cy6-Ty-Ks6"/>
                                     <constraint firstItem="Wtz-mu-GLA" firstAttribute="width" secondItem="j5c-wX-7Y7" secondAttribute="width" id="DRk-3A-5vh"/>
                                     <constraint firstAttribute="bottom" secondItem="UGI-FN-iL2" secondAttribute="bottom" id="EsE-2c-ROZ"/>
                                     <constraint firstItem="UGI-FN-iL2" firstAttribute="centerX" secondItem="j5c-wX-7Y7" secondAttribute="centerX" id="Hpc-9c-G5v"/>
                                     <constraint firstItem="6CO-ec-KkF" firstAttribute="leading" secondItem="we0-DS-B1O" secondAttribute="leading" id="IN4-VW-vm9"/>
-                                    <constraint firstItem="j5c-wX-7Y7" firstAttribute="leading" secondItem="we0-DS-B1O" secondAttribute="leading" constant="16" id="Kh2-mg-3S0"/>
+                                    <constraint firstItem="j5c-wX-7Y7" firstAttribute="leading" secondItem="we0-DS-B1O" secondAttribute="leading" id="Kh2-mg-3S0"/>
                                     <constraint firstAttribute="height" constant="44" id="YXx-lF-Dhc"/>
                                     <constraint firstItem="Wtz-mu-GLA" firstAttribute="leading" secondItem="j5c-wX-7Y7" secondAttribute="trailing" id="YeZ-Ws-5Qa"/>
                                     <constraint firstItem="Kmq-6V-J6a" firstAttribute="centerX" secondItem="Wtz-mu-GLA" secondAttribute="centerX" id="cMf-7e-KN8"/>
