--- a/AutoMall/ViewControllers/Mall/CommodityDetailContentCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailContentCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityDetailContentCell" rowHeight="60" id="KGk-i7-Jjw" customClass="CommodityDetailContentCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityDetailContentCell" rowHeight="99" id="KGk-i7-Jjw" customClass="CommodityDetailContentCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-ht-bo3">
-                        <rect key="frame" x="16" y="8" width="296" height="43.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述 商品详情描述" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-ht-bo3">
+                        <rect key="frame" x="16" y="8" width="296" height="82.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -35,7 +35,7 @@
             <connections>
                 <outlet property="remarkL" destination="WgH-ht-bo3" id="KZu-k4-ugb"/>
             </connections>
-            <point key="canvasLocation" x="-303" y="55"/>
+            <point key="canvasLocation" x="-303" y="66.5"/>
         </tableViewCell>
     </objects>
 </document>
