--- a/AutoMall/ViewControllers/Mall/CommodityDetailPriceCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailPriceCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="T2u-6e-kXc">
@@ -28,16 +28,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="jFN-Ff-uSI" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="55.5" y="11" width="24" height="21"/>
+                        <rect key="frame" x="55.5" y="13" width="22.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="wRm-je-X1y"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="配送费--元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="DhP-w4-KuV">
-                        <rect key="frame" x="95.5" y="11" width="51" height="21"/>
+                        <rect key="frame" x="94" y="13" width="51" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="aHk-ZJ-Wfl"/>
                         </constraints>
@@ -57,11 +57,11 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="36i-6R-Clk" secondAttribute="trailing" constant="8" id="1Sg-J7-yhi"/>
-                    <constraint firstItem="DhP-w4-KuV" firstAttribute="centerY" secondItem="T2u-6e-kXc" secondAttribute="centerY" id="FSz-HI-0UU"/>
+                    <constraint firstItem="DhP-w4-KuV" firstAttribute="centerY" secondItem="T2u-6e-kXc" secondAttribute="centerY" constant="2" id="FSz-HI-0UU"/>
                     <constraint firstItem="T2u-6e-kXc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Lta-83-YM3"/>
                     <constraint firstItem="DhP-w4-KuV" firstAttribute="leading" secondItem="jFN-Ff-uSI" secondAttribute="trailing" constant="16" id="MfW-hj-Ihs"/>
                     <constraint firstItem="36i-6R-Clk" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="WKO-eA-Z3b"/>
-                    <constraint firstItem="jFN-Ff-uSI" firstAttribute="centerY" secondItem="T2u-6e-kXc" secondAttribute="centerY" id="dch-dd-JuS"/>
+                    <constraint firstItem="jFN-Ff-uSI" firstAttribute="centerY" secondItem="T2u-6e-kXc" secondAttribute="centerY" constant="2" id="dch-dd-JuS"/>
                     <constraint firstItem="jFN-Ff-uSI" firstAttribute="leading" secondItem="T2u-6e-kXc" secondAttribute="trailing" constant="8" id="rGt-Dv-O72"/>
                     <constraint firstItem="T2u-6e-kXc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uT8-2Z-4Kf"/>
                 </constraints>
