--- a/AutoMall/ViewControllers/Mall/CommodityListVC.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityListVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,11 +13,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommodityListVC">
             <connections>
                 <outlet property="myTableView" destination="4A8-Jh-Jt6" id="EnW-TI-Tvw"/>
+                <outlet property="priceBtn" destination="JTT-SL-6GW" id="igN-zB-DTu"/>
                 <outlet property="sortBtn" destination="I8l-Wi-iVs" id="ZW9-YV-QJD"/>
-                <outlet property="tagBtn" destination="JTT-SL-6GW" id="vqj-WA-fcM"/>
                 <outlet property="topView" destination="exI-u0-wTL" id="H0M-EK-Bda"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="xiangmuBtn" destination="Dhi-Rz-hOK" id="4mK-3R-QjF"/>
+                <outlet property="xingjiBtn" destination="Dhi-Rz-hOK" id="nnf-Xo-944"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,8 +35,8 @@
                                 <constraint firstAttribute="height" constant="40" id="Vuf-Jy-zfC"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="titleEdgeInsets" minX="30" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="imageEdgeInsets" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
                             <state key="normal" title="星级" image="subject_expand_n">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -47,10 +47,10 @@
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYX-Bz-172">
                             <rect key="frame" x="124.5" y="9" width="1" height="21"/>
-                            <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="21" id="RUA-mH-HIx"/>
-                                <constraint firstAttribute="width" constant="1" id="scA-uo-kqI"/>
+                                <constraint firstAttribute="height" constant="21" id="RUA-mH-HIx" customClass="NSLayoutConstraintOnePixelLine"/>
+                                <constraint firstAttribute="width" constant="1" id="scA-uo-kqI" customClass="NSLayoutConstraintOnePixelLine"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -63,8 +63,8 @@
                                 <constraint firstAttribute="height" constant="40" id="Ilo-HV-Xrv"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="titleEdgeInsets" minX="30" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="imageEdgeInsets" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
                             <state key="normal" title="销量" image="subject_expand_n">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
@@ -75,10 +75,10 @@
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aXU-qQ-FcW">
                             <rect key="frame" x="249.5" y="9.5" width="1" height="21"/>
-                            <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="21" id="6Hc-YT-cLd"/>
-                                <constraint firstAttribute="width" constant="1" id="zd9-Nz-Ltz"/>
+                                <constraint firstAttribute="height" constant="21" id="6Hc-YT-cLd" customClass="NSLayoutConstraintOnePixelLine"/>
+                                <constraint firstAttribute="width" constant="1" id="zd9-Nz-Ltz" customClass="NSLayoutConstraintOnePixelLine"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -91,9 +91,9 @@
                                 <constraint firstAttribute="height" constant="40" id="HmC-fJ-YSj"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <inset key="imageEdgeInsets" minX="70" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            <state key="normal" title="折后价" image="subject_expand_n">
+                            <inset key="titleEdgeInsets" minX="30" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="imageEdgeInsets" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <state key="normal" title="价格" image="subject_expand_n">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <state key="selected" image="subject_collapse_n"/>
@@ -103,9 +103,9 @@
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vP1-FP-LaK">
                             <rect key="frame" x="0.0" y="39" width="375" height="1"/>
-                            <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="1" id="YIq-uq-hQk"/>
+                                <constraint firstAttribute="height" constant="1" id="YIq-uq-hQk" customClass="NSLayoutConstraintOnePixelLine"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -175,7 +175,7 @@
                 <constraint firstItem="exI-u0-wTL" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="saD-cc-Znm"/>
                 <constraint firstItem="exI-u0-wTL" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vhI-0U-XFn"/>
             </constraints>
-            <point key="canvasLocation" x="-443" y="53"/>
+            <point key="canvasLocation" x="-749" y="67"/>
         </view>
     </objects>
     <resources>
