--- a/AutoMall/ViewControllers/Mall/CommodityDetailPriceCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailPriceCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="T2u-6e-kXc">
@@ -37,7 +37,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="配送费--元" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="DhP-w4-KuV">
-                        <rect key="frame" x="94" y="13" width="51" height="21"/>
+                        <rect key="frame" x="104" y="13" width="51" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="aHk-ZJ-Wfl"/>
                         </constraints>
@@ -59,7 +59,7 @@
                     <constraint firstAttribute="trailing" secondItem="36i-6R-Clk" secondAttribute="trailing" constant="8" id="1Sg-J7-yhi"/>
                     <constraint firstItem="DhP-w4-KuV" firstAttribute="centerY" secondItem="T2u-6e-kXc" secondAttribute="centerY" constant="2" id="FSz-HI-0UU"/>
                     <constraint firstItem="T2u-6e-kXc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Lta-83-YM3"/>
-                    <constraint firstItem="DhP-w4-KuV" firstAttribute="leading" secondItem="jFN-Ff-uSI" secondAttribute="trailing" constant="16" id="MfW-hj-Ihs"/>
+                    <constraint firstItem="DhP-w4-KuV" firstAttribute="leading" secondItem="jFN-Ff-uSI" secondAttribute="trailing" constant="26" id="MfW-hj-Ihs"/>
                     <constraint firstItem="36i-6R-Clk" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="WKO-eA-Z3b"/>
                     <constraint firstItem="jFN-Ff-uSI" firstAttribute="centerY" secondItem="T2u-6e-kXc" secondAttribute="centerY" constant="2" id="dch-dd-JuS"/>
                     <constraint firstItem="jFN-Ff-uSI" firstAttribute="leading" secondItem="T2u-6e-kXc" secondAttribute="trailing" constant="8" id="rGt-Dv-O72"/>
