--- a/AutoMall/ViewControllers/Mall/CommodityDetailTuijianCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailTuijianCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityDetailTuijianCell" rowHeight="80" id="KGk-i7-Jjw" customClass="CommodityDetailTuijianCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityDetailTuijianCell" rowHeight="85" id="KGk-i7-Jjw" customClass="CommodityDetailTuijianCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="壳牌黄壳" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VD0-SO-CRz">
-                        <rect key="frame" x="104" y="8" width="148" height="21"/>
+                        <rect key="frame" x="104" y="16" width="148" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="aEB-QD-34g"/>
                         </constraints>
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥250" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="no7-qA-3mL">
-                        <rect key="frame" x="104" y="50.5" width="36.5" height="21"/>
+                        <rect key="frame" x="104" y="45" width="36.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="yjx-2O-oZI"/>
                         </constraints>
@@ -37,7 +37,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥250" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="H2O-ip-ERu" customClass="StrikeThroughLabel">
-                        <rect key="frame" x="148.5" y="50.5" width="36.5" height="21"/>
+                        <rect key="frame" x="148.5" y="45" width="36.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="WWR-zE-wff"/>
                         </constraints>
@@ -46,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="荐" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xdd-kr-wcV">
-                        <rect key="frame" x="277" y="10.5" width="15" height="15"/>
+                        <rect key="frame" x="277" y="18.5" width="15" height="15"/>
                         <color key="backgroundColor" red="0.73333333329999995" green="0.63529411759999999" blue="0.035294117649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="15" id="2ow-xK-MbX"/>
@@ -57,7 +57,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="爆" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ph-wc-IZu">
-                        <rect key="frame" x="257" y="10.5" width="15" height="15"/>
+                        <rect key="frame" x="257" y="18.5" width="15" height="15"/>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.0" blue="0.094117647060000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="15" id="8PR-uW-JqI"/>
@@ -67,15 +67,15 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="timg-2" translatesAutoresizingMaskIntoConstraints="NO" id="Cqt-o1-W0F">
-                        <rect key="frame" x="16" y="-0.5" width="80" height="80.5"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="Cqt-o1-W0F">
+                        <rect key="frame" x="16" y="2" width="80" height="80.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="29y-FZ-2sb"/>
                             <constraint firstAttribute="height" constant="80" id="2Sc-hA-IIh"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="折" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7F7-c0-Z1S">
-                        <rect key="frame" x="297" y="10.5" width="15" height="15"/>
+                        <rect key="frame" x="297" y="18.5" width="15" height="15"/>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.0" blue="0.094117647060000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="paq-6O-lkc"/>
@@ -89,16 +89,16 @@
                 <constraints>
                     <constraint firstItem="Xdd-kr-wcV" firstAttribute="centerY" secondItem="VD0-SO-CRz" secondAttribute="centerY" id="4ba-Xu-6NL"/>
                     <constraint firstItem="no7-qA-3mL" firstAttribute="leading" secondItem="Cqt-o1-W0F" secondAttribute="trailing" constant="8" id="7ST-7B-ELe"/>
+                    <constraint firstItem="no7-qA-3mL" firstAttribute="top" secondItem="VD0-SO-CRz" secondAttribute="bottom" constant="8" id="DdH-TJ-jKw"/>
                     <constraint firstItem="Cqt-o1-W0F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="MZY-eV-QwT"/>
                     <constraint firstItem="H2O-ip-ERu" firstAttribute="leading" secondItem="no7-qA-3mL" secondAttribute="trailing" constant="8" id="MfB-mw-L3E"/>
                     <constraint firstItem="VD0-SO-CRz" firstAttribute="leading" secondItem="Cqt-o1-W0F" secondAttribute="trailing" constant="8" id="NxJ-e1-31b"/>
                     <constraint firstItem="7F7-c0-Z1S" firstAttribute="leading" secondItem="Xdd-kr-wcV" secondAttribute="trailing" constant="5" id="XbE-12-jo0"/>
                     <constraint firstItem="Cqt-o1-W0F" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="YJv-d9-F8V"/>
                     <constraint firstItem="7Ph-wc-IZu" firstAttribute="centerY" secondItem="VD0-SO-CRz" secondAttribute="centerY" id="Z9j-Q7-vv8"/>
-                    <constraint firstItem="VD0-SO-CRz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="dro-TR-qmW"/>
+                    <constraint firstItem="VD0-SO-CRz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="dro-TR-qmW"/>
                     <constraint firstItem="7F7-c0-Z1S" firstAttribute="centerY" secondItem="VD0-SO-CRz" secondAttribute="centerY" id="ejZ-0w-n05"/>
                     <constraint firstItem="7Ph-wc-IZu" firstAttribute="leading" secondItem="VD0-SO-CRz" secondAttribute="trailing" constant="5" id="lfc-24-IJM"/>
-                    <constraint firstAttribute="bottom" secondItem="no7-qA-3mL" secondAttribute="bottom" constant="8" id="rTJ-sW-sff"/>
                     <constraint firstAttribute="trailing" secondItem="7F7-c0-Z1S" secondAttribute="trailing" constant="8" id="sWz-zl-K3B"/>
                     <constraint firstItem="H2O-ip-ERu" firstAttribute="centerY" secondItem="no7-qA-3mL" secondAttribute="centerY" id="sll-gV-6SK"/>
                     <constraint firstItem="Xdd-kr-wcV" firstAttribute="leading" secondItem="7Ph-wc-IZu" secondAttribute="trailing" constant="5" id="wcK-zY-2Fk"/>
@@ -113,10 +113,10 @@
                 <outlet property="tuijianL" destination="Xdd-kr-wcV" id="Ekz-Oh-qEt"/>
                 <outlet property="zhekouL" destination="7F7-c0-Z1S" id="fVK-hP-Sji"/>
             </connections>
-            <point key="canvasLocation" x="-141" y="27"/>
+            <point key="canvasLocation" x="-141" y="29.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="timg-2" width="691" height="667"/>
+        <image name="placeholderPictureSquare" width="302" height="302"/>
     </resources>
 </document>
