--- a/AutoMall/ViewControllers/Mall/CommodityDetailVC.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Dcw-mx-YI4">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="627"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="aBL-Qy-FgW"/>
@@ -31,7 +31,7 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Dcw-mx-YI4" secondAttribute="bottom" constant="40" id="9hD-s9-aBJ"/>
+                <constraint firstAttribute="bottom" secondItem="Dcw-mx-YI4" secondAttribute="bottom" constant="49" id="9hD-s9-aBJ"/>
                 <constraint firstItem="Dcw-mx-YI4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="dE8-oP-H1p"/>
                 <constraint firstItem="Dcw-mx-YI4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mdy-qk-3jC"/>
                 <constraint firstAttribute="trailing" secondItem="Dcw-mx-YI4" secondAttribute="trailing" id="pSB-rQ-99f"/>
